Updates for Image Service 4.0 (#6)
* Add byte source support to reading images and thumbnailing
* Add support for tiling a subrange of levels for a tiling job
* Add util method to get the orientation corrected dimensions without rotating the image
* Replace AWT Dimension with simpler internal Dimension class
* Add ByteSource support to MetadataExtractor
* Add option to get image reader without intermediate jpg encode with orientation fix applied
* Add orientation fix inline in thumbnailer
* Add additional calls to BufferedImage.flush() when images are no longer used.
* Add commons-imagining
* Update to commons-lang3
* Bump apache tika version
* Fix level range for single levels
* Add ByteSource and InputStream support to the MetadataExtractor
* Tiling bug fixes and MP4 metadata extractor
* Add consuming input streams when only checking image metadata for S3 streams
* Add check for minimum level
* Add centre crop thumbnail
* Rearrange square crop to crop before scale
* Add explicit square centre cropped thumbnail, fix crop operation, add fixed width thumbnail
* Reliability updates for getDimensionsWithCommonsImaging exception, ImageIO.write failure, height == width